--- a/website/macroScripts/Carrousel.cshtml
+++ b/website/macroScripts/Carrousel.cshtml
@@ -5,7 +5,7 @@
     <div class="container">
         <div id="carousel-banner" class="carousel slide">
             <h1 class="tagline">
-                <img src="img/tagline.png" alt="" /></h1>
+                <img src="/img/tagline.png" alt="" /></h1>
             <div class="carousel-inner">
                 <div class="item active">
                     @{
@@ -22,23 +22,3 @@
         </div>
     </div>
 </div>
-@*<div class="slider-wrapper theme-default">
-        <div id="slider" class="nivoSlider">
-            @{
-                if (this.Model.HasValue("slideImatges"))
-                {
-                    foreach (dynamic imatge in this.Model.Descendants("ImatgePortada"))
-                    {
-                        <a href="@this.Model.NodeById(@imatge.linkImatge).Url">
-                            <img src="@imatge.imatgeSlide.mediaItem[0].Image.umbracoFile" data-thumb="@imatge.imatgeSlide.mediaItem[0].Image.umbracoFile" 
-                            alt="@imatge.titolImatge @this.Dictionary.keywords"/>
-                        </a>
-                    }
-                }
-
-            }
-        </div>
-        <div id="htmlcaption" class="nivo-html-caption">
-            <strong>This</strong> is an example of a <em>HTML</em> caption with <a href="#">a link</a>.
-        </div>
-    </div>*@
