--- a/website/macroScripts/Mainmenu.cshtml
+++ b/website/macroScripts/Mainmenu.cshtml
@@ -23,15 +23,17 @@ NOTE: It is safe to remove this comment (anything between @ * * @), the code tha
     <div class="nav-principal">
         <ul class="nav nav-pills pull-right">
             @{ DynamicNode rootNode = new DynamicNode(-1);
-                DynamicNode home = rootNode.Descendants("Home").Items.FirstOrDefault();
-               var selected = Array.IndexOf(home.Path.Split(','), home.Id.ToString()) >= 0 ? " class=\"active\"" : "";
+               DynamicNode home = rootNode.Descendants("Home").Items.FirstOrDefault();
+               var isPageSelected = string.Compare(home.NiceUrl, CurrentModel.NiceUrl);
+               var selected = isPageSelected == 0 ? " class=\"active\"" : "";
                 <li@Html.Raw(selected)><a href="@home.NiceUrl">@Dictionary.Home</a></li>
             }
             @{
                 DynamicNode parentNode = CurrentModel.AncestorOrSelf("Home");
                 foreach (DynamicNode itemMenu in parentNode.Descendants().Items.Where(x => x.HasProperty("isMainMenuItem").Equals(true)).Where(x => x.Level == 3))
                 {
-                    selected = Array.IndexOf(Model.Path.Split(','), itemMenu.Id.ToString()) >= 0 ? " class=\"active\"" : "";
+                    isPageSelected = string.Compare(itemMenu.NiceUrl, CurrentModel.NiceUrl);
+                    selected = isPageSelected == 0 ? " class=\"active\"" : "";
                 <li@Html.Raw(selected)><a href="@itemMenu.NiceUrl">@itemMenu.Name</a></li>
                                                               selected = string.Empty;
                 }
@@ -40,7 +42,8 @@ NOTE: It is safe to remove this comment (anything between @ * * @), the code tha
                 DynamicNode blog = rootNode.Descendants("uBlogsyLanding").Items.FirstOrDefault();
                 if (blog != null)
                 {
-                    selected = Array.IndexOf(Model.Path.Split(','), blog.Id.ToString()) >= 0 ? " class=\"active\"" : "";
+                    isPageSelected = string.Compare(blog.NiceUrl, CurrentModel.NiceUrl);
+                    selected = isPageSelected == 0 ? " class=\"active\"" : "";
                 <li@Html.Raw(selected)><a href="@blog.NiceUrl">@Dictionary.Blog</a></li>
                 }
                 
