--- a/website/masterpages/Page.master
+++ b/website/masterpages/Page.master
@@ -1,5 +1,5 @@
-﻿<%@ Master Language="C#" MasterPageFile="~/umbraco/masterpages/default.master" AutoEventWireup="true" %>
+﻿<%@ Master Language="C#" MasterPageFile="~/masterpages/Base.master" AutoEventWireup="true" %>
 
-<asp:Content ContentPlaceHolderID="ContentPlaceHolderDefault" runat="server">
- 
-</asp:Content>
+<asp:content ContentPlaceHolderId="mainBody" runat="server">
+	
+</asp:content>
