--- a/website/macroScripts/Mainmenu.cshtml
+++ b/website/macroScripts/Mainmenu.cshtml
@@ -22,22 +22,28 @@ NOTE: It is safe to remove this comment (anything between @ * * @), the code tha
 <div class="col-sm-12">
     <div class="nav-principal">
         <ul class="nav nav-pills pull-right">
-            @{ DynamicNode rootNode = new DynamicNode(-1);
+            @{ 
+               DynamicNode rootNode = new DynamicNode(-1);
                DynamicNode home = rootNode.Descendants("Home").Items.FirstOrDefault();
                var isPageSelected = string.Compare(home.NiceUrl, CurrentModel.NiceUrl);
                var selected = isPageSelected == 0 ? " class=\"active\"" : "";
-                <li@Html.Raw(selected)><h1><a href="@home.NiceUrl">@Dictionary.Home</a></h1></li>
+                <li@Html.Raw(selected)><a href="@home.NiceUrl">@Dictionary.Home</a> </li>
             }
             @{
-                DynamicNode parentNode = CurrentModel.AncestorOrSelf("Home");
-                foreach (DynamicNode itemMenu in parentNode.Descendants().Items.Where(x => x.HasProperty("isMainMenuItem").Equals(true)).Where(x => x.Level == 3))
+
+                DynamicNode parentNode = CurrentModel.NodeTypeAlias == "uBlogsyLanding" ? rootNode : CurrentModel.AncestorOrSelf("Home");
+                //DynamicNode parentNode = CurrentModel.AncestorOrSelf("Home");
+                if (parentNode != null)
                 {
-                    isPageSelected = string.Compare(itemMenu.NiceUrl, CurrentModel.NiceUrl);
-                    selected = isPageSelected == 0 ? " class=\"active\"" : "";
-                    <li@Html.Raw(selected)><h1><a href="@itemMenu.NiceUrl">
-                                               @itemMenu.Name
-                                           </a></h1></li>
-                                                              selected = string.Empty;
+                    foreach (DynamicNode itemMenu in parentNode.Descendants().Items.Where(x => x.HasProperty("isMainMenuItem").Equals(true)).Where(x => x.Level == 3))
+                    {
+                        isPageSelected = string.Compare(itemMenu.NiceUrl, CurrentModel.NiceUrl);
+                        selected = isPageSelected == 0 ? " class=\"active\"" : "";
+                <li@Html.Raw(selected)><a href="@itemMenu.NiceUrl">
+                    @itemMenu.Name
+                </a></li>
+               selected = string.Empty;
+                    }
                 }
             }
             @{
@@ -46,7 +52,7 @@ NOTE: It is safe to remove this comment (anything between @ * * @), the code tha
                 {
                     isPageSelected = string.Compare(blog.NiceUrl, CurrentModel.NiceUrl);
                     selected = isPageSelected == 0 ? " class=\"active\"" : "";
-                <li@Html.Raw(selected)><h1><a href="@blog.NiceUrl">@Dictionary.Blog</a></h1></li>
+                <li@Html.Raw(selected)><a href="@blog.NiceUrl">@Dictionary.Blog</a> </li>
                 }
                 
             }
