Control empty fields and changed labels from home and page

--- a/website/macroScripts/Carrousel.cshtml
+++ b/website/macroScripts/Carrousel.cshtml
@@ -4,8 +4,8 @@
 <div class="banner">
     <div class="container">
         <div id="carousel-banner" class="carousel slide">
-            <h1 class="tagline">
-                <img src="/img/tagline.png" alt="" /></h1>
+            <span class="tagline">
+                <img src="/img/tagline.png" alt="" /></span>
             <div class="carousel-inner">
                 <div class="item active">
                     @{
