--- a/website/macroScripts/RenderPage.cshtml
+++ b/website/macroScripts/RenderPage.cshtml
@@ -1,7 +1,7 @@
 @using umbraco.MacroEngines
 <div class="wrap">
     <div class="container">
-        <div class="row">
+        <div class="row page">
             @{
                 <h2>@CurrentModel.GetProperty("title")</h2>
                 <p>@CurrentModel.GetProperty("text")</p>
