--- a/website/macroScripts/CarrouselProfile.cshtml
+++ b/website/macroScripts/CarrouselProfile.cshtml
@@ -6,21 +6,43 @@
         @*<section>*@
         @{
             DynamicNode currentNode = new DynamicNode(CurrentModel.Id);
-            foreach (DynamicNode profileNode in currentNode.Descendants("Profile"))
+            List<DynamicNode> folderList = CurrentModel.Descendants("Folder").Items;
+            List<DynamicNode> profileFolder = folderList.Where(x => x.GetProperty("identifier").Value == "Profiles").ToList();
+            foreach (DynamicNode profileNode in profileFolder.First().Descendants("Profile"))
             {
                 dynamic profileImage = profileNode;
-<article>
-
-            <div class="avatar">
-                <img src="@profileImage.profileImage.mediaItem[0].Image.umbracoFile" alt="@profileNode.GetProperty("name")" height="100" width="90" /></div>
-
-            <div class="txt">
-                <p class="title">
-                    <a href="#">@profileNode.GetProperty("name")</a></p>
-                <p>
-                    @profileNode.GetProperty("summaryDescription")</p>
-            </div>
- </article>
+                <article>
+                    <div class="avatar">
+                    @{
+                try
+                {
+                    var image = profileImage.profileImage.mediaItem[0].Image.umbracoFile;
+                            <img src="@image" alt="@profileNode.GetProperty("name")" height="100" width="90" />
+                }
+                catch (Exception)
+                {
+                    //Show default image
+                            <img src="/img/defaultImage.jpg" alt="" height="100" width="90" />
+                    
+                }
+                    }
+                    </div>
+                    <div class="txt">
+                        <p class="title">
+                            @if (!string.IsNullOrEmpty(profileNode.GetProperty("name").ToString()))
+                            {
+                                <a href="#">@profileNode.GetProperty("name")</a>
+                            }
+                             
+                        </p>
+                        <p>
+                            @if (!string.IsNullOrEmpty(profileNode.GetProperty("summaryDescription").ToString()))
+                            {                            
+                                @profileNode.GetProperty("summaryDescription")
+                            }
+                        </p>
+                    </div>
+                </article>
             }
         }
         @*</section>*@
