--- a/website/masterpages/Base.master
+++ b/website/masterpages/Base.master
@@ -14,7 +14,7 @@
         <meta name="author" content="" />
         <script src="/scripts/libs/less/less-1.4.1.min.js" type="text/javascript"></script>
         <link rel="shortcut icon" type="image/png" href="/img/favicon.png" />
-        <title>BTC - Barcelona Traveling Consulting</title>
+        <title>Barcelona Travel Consulting</title>
         <!-- Bootstrap core CSS -->
         <%--<link href="/css/libs/bootstrap/bootstrap.css" type="text/css" rel="stylesheet" />--%>
         <link rel="stylesheet/less" type="text/css" href="/less/styles.less" />
@@ -22,6 +22,7 @@
         <%--<link rel="stylesheet/less" type="text/css" href="/css/styles.css" />--%>
     </head>
     <body style="">
+        <h1 class="hide">Barcelona Travel Consulting</h1>
         <div class="wrapper">
             <!-- Begin: Header -->
             <header>
