--- a/website/masterpages/Home.master
+++ b/website/masterpages/Home.master
@@ -1,6 +1,7 @@
 ﻿<%@ Master Language="C#" MasterPageFile="~/masterpages/Base.master" AutoEventWireup="true" %>
 
 <asp:Content ContentPlaceHolderID="mainBody" runat="server">
+    <link href="/css/home.css" rel="stylesheet" type="text/css" />
         <umbraco:Macro Alias="Carrousel" runat="server" />
     <div class="wrap">
         <div class="home-experiences">
