--- a/website/masterpages/Page.master
+++ b/website/masterpages/Page.master
@@ -1,5 +1,6 @@
 ﻿<%@ Master Language="C#" MasterPageFile="~/masterpages/Base.master" AutoEventWireup="true" %>
 
 <asp:content ContentPlaceHolderId="mainBody" runat="server">
+    <link href="/css/page.css" rel="stylesheet" type="text/css" />
 	<umbraco:Macro Alias="RenderPage" runat="server" />
 </asp:content>
