--- a/website/css/home.css
+++ b/website/css/home.css
@@ -1,6 +1,20 @@
-﻿div.home-blog h3 {
+﻿@import url(http://fonts.googleapis.com/css?family=Roboto:100);
+div.home-blog h3 {
     font-size: 16px;
 }
 .banner .carousel .tagline {
     top: 45px;
+}
+.banner .carousel .tagline 
+{
+    width: 330px;
+    font-family: 'Roboto', sans-serif;    
+    color: white;
+    font-size: 22px;
+    top: 45px;
+}
+.banner .carousel .tagline .big 
+{
+    font-family: 'Roboto', sans-serif;
+    font-size: 41px;
 }
